# pylinphonc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.bat  pyproject.toml
src/pylinphonc/: __init__.py  __main__.py  _cli.py  _ctypes_api.py
tests/: test_ctypes_api.py
